# gr-gnMAX2769

./: CMakeLists.txt  MANIFEST.md  README.md
apps/: CMakeLists.txt
cmake/Modules/: GrMiscUtils.cmake  GrPlatform.cmake  GrPython.cmake  GrSwig.cmake  GrTest.cmake  gnMAX2769Config.cmake  targetConfig.cmake.in
docs/: CMakeLists.txt  README.gnMAX2769
docs/doxygen/: CMakeLists.txt  Doxyfile.in  Doxyfile.swig_doc.in  swig_doc.py
docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
docs/doxygen/other/: group_defs.dox  main_page.dox
examples/: README  gnss-sdr_BDS_B1I_GNMAX_realtime.conf  gnss-sdr_GLONASS_L1_GNMAX_realtime.conf  gnss-sdr_GPS_L1_GNMAX_realtime.conf  gnss-sdr_Galileo_E1_GNMAX_realtime.conf
firmware/gnMAX2769/: README_firmware  getdevpath
firmware/gnMAX2769/include/: eeprom.h  fx2regs.h  gnmax_main.h  gnmax_max2769.h  gnmax_regs.h  syncdelay.h  usb_common.h  usb_descriptors.h  usrp_commands.h  usrp_common.h
firmware/gnMAX2769/lib/: Makefile  delay.c  isr.c  usb_common.c
firmware/gnMAX2769/src/: Makefile  _startup.a51  eeprom.c  gnmax_main.c  gnmax_max2769.c  gpif.c  usb_descriptors.a51  usrp_common.c  vectors.a51
grc/: CMakeLists.txt  gnMAX2769_source_cc.block.yml  gnMAX2769_source_cc.xml
include/: CMakeLists.txt  gnmax.h  gnmax_api.h  gnmax_defines.h  gnmax_source.h  gnmax_source_cc.h  libusb_types.h
include/gnMAX2769/: CMakeLists.txt  api.h  gnmax_source_cc.h
include/gnuradio/gnMAX2769/: gnmax_source_cc.h
lib/: CMakeLists.txt  gnmax.cc  gnmax.h  gnmax_defines.h  gnmax_source.cc  gnmax_source.h  gnmax_source_cc.cc  gnmax_source_cc_impl.cc  gnmax_source_cc_impl.h  qa_gnmax_source_cc.cc
python/: CMakeLists.txt  __init__.py  build_utils.py  build_utils_codes.py  qa_gnmax.py
python/gnMAX2769/: CMakeLists.txt  __init__.py
python/gnMAX2769/bindings/: CMakeLists.txt  gnmax_source_cc_python.cc  python_bindings.cc
python/gnMAX2769/bindings/docstrings/: gnmax_source_cc_pydoc_template.h
swig/: CMakeLists.txt  gnMAX2769_swig.i  gnmax_swig.i
udev/: 10-gnmax2769.rules
