# Copyright (C) 2012-2019  (see AUTHORS file for a list of contributors)
#
# This file is a part of gr-gnMAX2769 projest and is based on 
# docs/CMakeLists.txt file, a part of GN3S driver for gnss-sdr project
#
# gr-gnMAX2769 is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# gr-gnMAX2769 is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with gr-gnMAX2769; see the file COPYING.  If not, write to
# the Free Software Foundation, Inc., 51 Franklin Street,
# Boston, MA 02110-1301, USA.

install(FILES
    gnMAX2769_source_cc.xml
    DESTINATION share/gnuradio/grc/blocks
)
